fix invalid documentation for /multi/modversions
